--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,10 @@
 version = "3.5.3"
 runner.dialect = scala3
+
+align.openParenDefnSite = false
+align.openParenCallSite = false
+importSelectors = noBinPack
+maxColumn = 90
+
+# ScalaDoc style documentation
+docstrings.style = SpaceAsterisk
